--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
+  academic:
     output: true
     permalink: /:collection/:path/
   portfolio:
