--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ description              : &description "personal description"
 url                      : https://canbodrumlu.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "canbodrumlu/canbodrumlu.github.io"
+skin                     : minimal # alternative options like dark, contrast, etc.
+
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
