--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : # 
   impactstory      : # URL
-  orcid            : "https://orcid.org/0009-0008-2911-6337"
+  orcid            : 
   semantic         : # URL
   pubmed           : # 
   researchgate     : # URL
