--- a/_config.yml
+++ b/_config.yml
@@ -349,3 +349,9 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+# Enable dark mode toggle
+dark_mode:
+  enabled: true
+  default: "light"
+
